Support DSMR 5.0